Added basic benchmark for TreeDB