@@ -11,17 +11,20 @@ import ch.michel.Utility;
 import java.io.IOException;
 import java.math.BigInteger;
 import java.util.ArrayList;
-import java.util.Date;
-import java.util.GregorianCalendar;
 import java.util.List;
 import java.util.Optional;
 import javax.crypto.SecretKey;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
-import com.n1analytics.paillier.EncryptedNumber;
-import com.n1analytics.paillier.PaillierContext;
 
+/**
+ * 
+ * Running locally:
+ * java -classpath ".:lib/aws-sdk/lib/aws-java-sdk-1.11.255.jar:lib/aws-sdk/third-party/lib/*:/Users/michel/Git/treedb/client/target/treedb.client-0.0.1-SNAPSHOT-jar-with-dependencies.jar" --add-modules=java.xml.bind,java.activation ch/michel/test/TreeDBBenchmark 1000 1 AKIAI6DALQXSPRIEAPWQ zerBOTixXhgqvJuij00evoJOOHYDAuYR9cYTZXYy 127.0.0.1 8001 >> LOG.log
+ */
 public class TreeDBBenchmark {
+    private static String BASELINE_S3_BUCKET = "treedb-baseline";
+    private static DataRepresentation DR = DataRepresentation.CHUNKED_COMPRESSED_ENCRYPTED;
 
     public static void main(String[] args) throws IOException {
         int maxChunkSize = Integer.valueOf(args[0]);
@@ -32,89 +35,91 @@ public class TreeDBBenchmark {
 		int treedbPort = Integer.valueOf(args[5]);
         SecretKey secretKey = Utility.generateSecretKey();
 
+        // Extract and duplicate data to have enough chunks
         AvaData avaData = new AvaData();
-        List<Chunk> chunks = avaData.getChunks(maxChunkSize, false, true);
-		S3 s3 = new S3(aws_access_key_id, aws_secret_access_key);
-        String baselineBucket = "treedb-baseline";
-        DataRepresentation dr = DataRepresentation.CHUNKED_COMPRESSED_ENCRYPTED;
+        List<Chunk> chunks = avaData.getChunks(maxChunkSize, false, true); // 30 chunks
+        List<Chunk> lastChunks = chunks;
+        for (int i = 0; i < 19; i++) { // copy to get to 600 chunks amounts for better results
+            List<Chunk> newChunks = new ArrayList<>();
+            lastChunks.forEach(c -> newChunks.add(c.copy(86400*30))); // add 30 days on top of the current data
+            chunks.addAll(newChunks); 
+            lastChunks = newChunks;
+        }
 
-        System.out.format("%s\t%s\t%s\t%s\n", "Data Store", "Retrieval & Decryption", "Sum computation", "Total");        
+        S3 s3 = new S3(aws_access_key_id, aws_secret_access_key);
+        cleanState(chunks, s3, BASELINE_S3_BUCKET);
+        TreeDB trDB = new TreeDB(treedbIP, treedbPort);
+        trDB.openConnection();
+        CryptoKeyPair keys = CryptoKeyPair.generateKeyPair();
+        String streamID = trDB.createStream(2, "{ 'sum': true }", keys.publicKey, "S3");
+
+        // Populate S3 and TreeDB
+        for (Chunk c : chunks) {
+            byte[] data = c.serialise(DR, Optional.of(secretKey));
+            s3.put(c, BASELINE_S3_BUCKET, data);
+
+            BigInteger plainSum = c.getSum();
+            BigInteger encryptedSum = keys.publicKey.raw_encrypt_without_obfuscation(plainSum);
+            data = c.serialise(DR, Optional.of(secretKey));
+            String metadata = String.format("{ 'from': %s, 'to': %s, 'sum': %s }", c.getFirstEntry().getTimestamp(), c.getLastEntry().getTimestamp(), encryptedSum);
+            trDB.insert(streamID, c.getPrimaryAttribute(), data, metadata); // append chunk to the index
+        }
+
+        System.out.format("%s\t%s\t%s\t%s\n", "Data Store", "Retrieval & Decryption", "Sum computation", "Total");   
+
         for (int i=0; i < experimentReps; i++) {
-            // Populate S3
-            for (Chunk chunk : chunks) {
-                byte[] data = chunk.serialise(dr, Optional.of(secretKey));
-                s3.put(chunk, baselineBucket, data);
-            }
-            
-            // Populate index with S3 as a storage layer
-            TreeDB trDB = new TreeDB(treedbIP, treedbPort);
-            trDB.openConnection();
-            CryptoKeyPair keys = CryptoKeyPair.generateKeyPair();
-            String streamID = trDB.createStream(2, "{ 'sum': true }", keys.publicKey);
-            BigInteger actualSum = BigInteger.ZERO;
-
-            // TESTT
-            PaillierContext pContext = keys.publicKey.createSignedContext();
-            EncryptedNumber encSum = null;
-
-            for (Chunk chunk : chunks) {
-                BigInteger plainSum = chunk.getSum();
-                actualSum = actualSum.add(plainSum);
-
-                BigInteger encryptedSum = keys.publicKey.raw_encrypt_without_obfuscation(plainSum);
-                encSum = encSum == null ? new EncryptedNumber(pContext, encryptedSum, 2048) : encSum.add(new EncryptedNumber(pContext, encryptedSum, 2048));
-                
-                byte[] data = chunk.serialise(dr, Optional.of(secretKey));
-                String metadata = String.format("{ 'from': %s, 'to': %s, 'sum': %s }", chunk.getFirstEntry().getTimestamp(), chunk.getLastEntry().getTimestamp(), encryptedSum); //
-                trDB.insert(streamID, chunk.getPrimaryAttribute(), data, metadata);
-            }
+            System.out.println("Experiment number #" + i);
 
             /**
-             * Baseline S3
+             * S3
              */
-            // GET from S3 & calculate the sum of all chunks
-            long start = System.nanoTime();
-            List<Chunk> retrievedChunks = new ArrayList<>();
-            for (Chunk chunk : chunks) {
-                byte[] res = s3.get(chunk, baselineBucket);
-                retrievedChunks.add(Chunk.deserialise(dr, res, Optional.of(secretKey)));
-            }
-            long retrievalTime = (System.nanoTime() - start)/1000000;
+            for (int j = 0; j < chunks.size(); j++) {
+                // GET from S3 & calculate the sum of all chunks
+                long start = System.nanoTime();
+                List<Chunk> retrievedChunks = new ArrayList<>();
+                for (Chunk chunk : chunks.subList(0, j+1)) {
+                    byte[] res = s3.get(chunk, BASELINE_S3_BUCKET);
+                    retrievedChunks.add(Chunk.deserialise(DR, res, Optional.of(secretKey)));
+                }
+                long retrievalTime = (System.nanoTime() - start)/1000000;
 
-            // Calculate sum locally 
-            start = System.nanoTime();
-            BigInteger s3Sum = BigInteger.ZERO;
-            for (Chunk chunk : retrievedChunks) {
-                s3Sum = s3Sum.add(chunk.getSum());
+                // Calculate sum locally 
+                start = System.nanoTime();
+                BigInteger s3Sum = BigInteger.ZERO;
+                for (Chunk chunk : retrievedChunks) {
+                    s3Sum = s3Sum.add(chunk.getSum());
+                }
+                long sumComputationTime = (System.nanoTime() - start)/1000000;
+                
+                printStats("S3", retrievalTime, sumComputationTime);
             }
-            long sumComputationTime = (System.nanoTime() - start)/1000000;
-            
-            printStats("S3", retrievalTime, sumComputationTime);
 
             /**
              * TreeDB + S3
              */
-            // GET from TreeDB
-            start = System.nanoTime();
-            String stats = trDB.getStatistics(streamID, new GregorianCalendar(2000, 1, 1).getTimeInMillis()/1000, new Date().getTime()/1000); // convert to seconds to match Ava timestamps 
+            for (int j = 0; j < chunks.size(); j++) {
+                // GET from TreeDB
+                long start = System.nanoTime();
+                String stats = trDB.getStatistics(streamID, chunks.get(0).getFirstEntry().getTimestamp(), chunks.get(j).getLastEntry().getTimestamp());
 
-            JsonParser parser = new JsonParser();
-            JsonObject jObj = parser.parse(stats).getAsJsonObject();
-            BigInteger treeDBEncryptedSum = jObj.get("sum").getAsBigInteger();
-            long treeDbRetrievalTime = (System.nanoTime() - start)/1000000;
-
-            BigInteger treeDBDecryptedSum = keys.privateKey.raw_decrypt(treeDBEncryptedSum);
-            printStats("TreeDB+S3", treeDbRetrievalTime, 0);
-
-            System.out.println("Actual SUM:  " + actualSum);
-            System.out.println("S3 SUM:  " + s3Sum);
-            System.out.println("TreeDB+S3 SUM: " + treeDBDecryptedSum);
-            
-            // Clean the state before the next repetition
-            // TreeDB currently simply creates a new stream
-            for (Chunk c : chunks) {
-                s3.del(c, baselineBucket);
+                JsonParser parser = new JsonParser();
+                JsonObject jObj = parser.parse(stats).getAsJsonObject();
+                BigInteger treeDBEncryptedSum = jObj.get("sum").getAsBigInteger();
+                BigInteger decryptedSum = keys.privateKey.raw_decrypt(treeDBEncryptedSum);
+                long treeDbRetrievalTime = (System.nanoTime() - start)/1000000;
+                printStats("TreeDB+S3", treeDbRetrievalTime, 0);
             }
+        }
+
+        // Clean state of the experiment
+        cleanState(chunks, s3, BASELINE_S3_BUCKET);
+        cleanState(chunks, s3, streamID);
+        trDB.closeConnection();
+    }
+
+    private static void cleanState(List<Chunk> chunks, S3 s3, String bucketName) {
+        for (Chunk c : chunks) {
+            s3.del(c, bucketName);
         }
     }
 
